adds placeholders for the needed replacements to the template files

--- a/frb_codegen/assets/integration_template/rust_builder/android/build.gradle
+++ b/frb_codegen/assets/integration_template/rust_builder/android/build.gradle
@@ -51,6 +51,6 @@ android {
 
 apply from: "../cargokit/gradle/plugin.gradle"
 cargokit {
-    manifestDir = "../../rust"
-    libname = "rust_lib"
+    manifestDir = "../../REPLACE_ME_RUST_MANIFEST_DIR"
+    libname = "REPLACE_ME_RUST_LIB_NAME"
 }
