--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -23,8 +23,8 @@
 - Zaitam: Fix when method return struct. Partial migration to Dart 3.
 - coder0xff: Discuss binding unmodified Rust. Refactor SupportedInnerType. Extra codegen tester.
 - nitn3lav: Nested `struct`s without `Box`.
+- AlienKevin: Add flutter example for macOS. Add doc for Android NDK bug. Improve migration doc.
 - alexthe2: Add Option Datetime. Add empty structs. Improve doc. Add `r#`. Fix mirror enum bug.
-- AlienKevin: Add flutter example for macOS. Add doc for Android NDK bug.
 - banool: Fix pubspec parsing. Fix symbol-stripping doc.
 - anlumo: Fix freezed + methods. Non-clone RustOpaque.
 - temeddix: Fix broken CI. Custom num workers. Fix MacOS doc steps. Update doc. Make zero-copy defaultable.
