feat: update ci to check msrv

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -406,8 +406,7 @@ jobs:
           # tests the MSRV
           # run on all rust packages, though only needed for frb_rust and frb_codegen
           - image: ubuntu-latest
-          # update this, if a later MSRV is needed
-            version: 1.74.0
+            version: 1.70.0 # update this, if a later MSRV is needed
 
     steps:
       # setup
