fix: more places

--- a/frb_codegen/assets/integration_template/rust/Cargo.lock.template
+++ b/frb_codegen/assets/integration_template/rust/Cargo.lock.template
@@ -478,7 +478,7 @@ dependencies = [
 ]
 
 [[package]]
-name = "rust_lib"
+name = "REPLACE_ME_RUST_CRATE_NAME"
 version = "0.1.0"
 dependencies = [
  "flutter_rust_bridge",
