--- a/frb_rust/Cargo.toml
+++ b/frb_rust/Cargo.toml
@@ -49,6 +49,12 @@ web-sys = { version = "0.3.58", features = [
     "BroadcastChannel",
 ] }
 
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.13"
+
+[target.'cfg(target_os = "ios")'.dependencies]
+oslog = "0.1.0"
+
 [build-dependencies]
 cc = "1.0"
 build-target = "0.4.0"
