--- a/frb_rust/Cargo.toml
+++ b/frb_rust/Cargo.toml
@@ -50,10 +50,10 @@ web-sys = { version = "0.3.58", features = [
 ] }
 
 [target.'cfg(target_os = "android")'.dependencies]
-android_logger = "0.13"
+android_logger = { version = "0.13" , optional = true}
 
 [target.'cfg(target_os = "ios")'.dependencies]
-oslog = "0.1.0"
+oslog = { version = "0.1.0" , optional = true}
 
 [build-dependencies]
 cc = "1.0"
