--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -53,6 +53,7 @@
 - CosmicHorrorDev: Change deps.
 - w1th0utnam3: Improve message.
 - vincent-herlemont: Loosen version.
+- samuel-cavalcanti: Improve doc.
 - zaynetro: Improve doc.
 - raphaelrobert: Remove oudated doc.
 - DMouayad: Improve doc.
