--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -760,7 +760,7 @@
       "login": "samuel-cavalcanti",
       "name": "Samuel Cavalcanti",
       "avatar_url": "https://avatars.githubusercontent.com/u/24573157?v=4",
-      "profile": "http://samuel-cavalcanti.github.io",
+      "profile": "https://samuel-cavalcanti.github.io",
       "contributions": [
         "doc"
       ]
