--- a/frb_dart/pubspec.yaml
+++ b/frb_dart/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
 dev_dependencies:
   build_cli: ^2.2.0
   build_runner: ^2.2.0
-  ffigen: ">=8.0.0"
+  ffigen: ">=8.0.0 <10.0.0"
   flutter_lints: ^3.0.1
   test: ^1.16.8
   mocktail: ^1.0.1
